[package]
name = "arxiv-linkedin-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.82"
license = "MIT"
description = "Multi-agent system for AI paper curation and LinkedIn publishing"
repository = "https://github.com/SamoraDC/arxiv-linkedin-agent"
authors = ["Davi Samora <samora.davi@gmail.com>"]
keywords = ["ai", "agents", "arxiv", "linkedin", "automation"]
categories = ["command-line-utilities", "science"]

[dependencies]
# ═══════════════════════════════════════════════════════════════════════════════
# ASYNC RUNTIME
# ═══════════════════════════════════════════════════════════════════════════════
tokio = { version = "1.40", features = ["full", "tracing"] }
futures = "0.3"

# ═══════════════════════════════════════════════════════════════════════════════
# LLM & AI FRAMEWORKS
# ═══════════════════════════════════════════════════════════════════════════════
rig-core = "0.6"                   # Agent orchestration framework
async-openai = "0.25"              # OpenAI-compatible client (works with Groq/OpenRouter)
fastembed = "4.0"                  # Local embedding generation

# ═══════════════════════════════════════════════════════════════════════════════
# DATABASES
# ═══════════════════════════════════════════════════════════════════════════════
duckdb = { version = "1.4", features = ["bundled", "json", "parquet", "modern-full"] }
lancedb = "0.15"                   # Vector database for semantic search
arrow = "53"                       # Apache Arrow for data interchange

# ═══════════════════════════════════════════════════════════════════════════════
# HTTP & NETWORKING
# ═══════════════════════════════════════════════════════════════════════════════
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "stream"] }
url = "2.5"
hyper = "1.5"

# ═══════════════════════════════════════════════════════════════════════════════
# SERIALIZATION
# ═══════════════════════════════════════════════════════════════════════════════
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_xml_rs = "0.6"               # Arxiv API XML parsing
toml = "0.8"                       # Configuration files

# ═══════════════════════════════════════════════════════════════════════════════
# TELEGRAM INTEGRATION
# ═══════════════════════════════════════════════════════════════════════════════
teloxide = { version = "0.14", features = ["macros", "auto-send", "throttle"] }

# ═══════════════════════════════════════════════════════════════════════════════
# DATE/TIME & ASTRONOMY
# ═══════════════════════════════════════════════════════════════════════════════
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
sunrise = "1.2"                    # Shabbat calculation (sunrise/sunset times)

# ═══════════════════════════════════════════════════════════════════════════════
# HTML GENERATION
# ═══════════════════════════════════════════════════════════════════════════════
maud = "0.26"                      # Type-safe HTML generation for dashboard

# ═══════════════════════════════════════════════════════════════════════════════
# OBSERVABILITY
# ═══════════════════════════════════════════════════════════════════════════════
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# ═══════════════════════════════════════════════════════════════════════════════
# SECURITY
# ═══════════════════════════════════════════════════════════════════════════════
regex = "1.10"
unicode-normalization = "0.1"
secrecy = "0.10"                   # Secure secret handling

# ═══════════════════════════════════════════════════════════════════════════════
# PDF PROCESSING
# ═══════════════════════════════════════════════════════════════════════════════
pdf-extract = "0.7"
lopdf = "0.34"

# ═══════════════════════════════════════════════════════════════════════════════
# UTILITIES
# ═══════════════════════════════════════════════════════════════════════════════
anyhow = "1.0"                     # Error handling
thiserror = "2.0"                  # Custom error types
config = "0.14"                    # Configuration management
uuid = { version = "1.10", features = ["v4", "serde"] }
base64 = "0.22"
once_cell = "1.20"
parking_lot = "0.12"               # Faster mutexes
dashmap = "6.1"                    # Concurrent hashmap for rate limiting
backoff = { version = "0.4", features = ["tokio"] }  # Exponential backoff

# ═══════════════════════════════════════════════════════════════════════════════
# CLI
# ═══════════════════════════════════════════════════════════════════════════════
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"                 # Progress bars
console = "0.15"                   # Terminal formatting
dialoguer = "0.11"                 # Interactive prompts for setup wizard

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.5"
wiremock = "0.6"                   # HTTP mocking for API tests
criterion = "0.5"                  # Benchmarking
tempfile = "3.13"
test-case = "3.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2

[[bin]]
name = "arxiv-linkedin-agent"
path = "src/main.rs"

[features]
default = []
# Enable vision capabilities (for image analysis in papers)
vision = []
# Enable advanced analytics collection
analytics = []
# Enable debug mode with verbose logging
debug = ["tracing-subscriber/ansi"]
